# gnnff

./: LICENSE  Pipfile  README.md  requirements.txt  setup.cfg
docs/: version.md
src/gnnff/: __init__.py  __version__.py
src/gnnff/data/: __init__.py  celldata.py  crystaldata.py  keys.py  split.py
src/gnnff/model/: gnnff.py
src/gnnff/nn/: __init__.py  activation.py  base.py  embedding.py  functional.py  gnn.py  message.py  neighbors.py  output.py
src/gnnff/representation/: __init__.py
src/gnnff/train/: __init__.py  trainer.py
src/gnnff/train/hooks/: __init__.py  stop.py
src/gnnff/utils/: __init__.py  data.py  evaluation.py  parsing.py  poscar.py  script_utils.py  training.py
src/gnnffpack/: __init__.py
src/gnnffpack/data/: __init__.py  celldata.py
src/gnnffpack/model/: __init__.py  gnnff.py
src/gnnffpack/nn/: activation.py  gnn.py  message.py  output.py
src/gnnffpack/utils/: data.py  training.py
src/scripts/: args_eval.json  args_gnnff.json  args_train.json  eval.json  gnnff_run  gnnff_run.py  merge_xyz  outcar2xyz  poscar2xyz  train.json
src/scripts/argument/: eval.json  train.json
