[metadata]
name = gnnff
version = attr: gnnff.__version__.__version__
author = Kento Nishio
author_email = ken2403.pmtdg@gmail.com
description = GNNFF - 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ken2403/gnnff
license = MIT

[options]
zip_safe = False
python_requires = >=3.6
package_dir=
    =src
packages=find:
scripts =
    src/scripts/
install_requires =
    torch>=1.7
    numpy
    ase>=3.21
    schnetpack

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    sacred
    pytest-console-scripts
    pytest-datadir